# PhaseFieldModel

./: ANALYSIS_RESULTS.md  CMakeLists.txt  CUDA_Analysis.md  GrainGrid.csv  HPC_SETUP.md  MODEL_EQUATIONS.md  README.md  SoA_REFACTORING_COMPLETE.md  plotPhaseResults.mlx  run_multiple_simulations.sh
Analysis Tools/: CNT.py  plotDistributions.py
Figures/: FreeSurfaceFit.fig
config/: modelConfig.json  modelConfig_hpc.json  solidification_tracking.csv  spherical_harmonics_coeffs.txt
include/: glVisualization.hpp  gridField.hpp  helperFunctions.hpp  importConfig.hpp  model.hpp  modelStartup.hpp
src/: glVisualization.cpp  gpuModel.cpp  gridField.cpp  helperFunctions.cpp  importConfig.cpp  main.cpp  model.cpp  modelStartup.cpp  model_aos_backup.cpp  visualization.cpp
